adding new logo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <!--<editor-fold desc="Description">-->
 <resources>
-    <string name="app_name">CapstoneBangkit</string>
+    <string name="app_name">Protecc - Violence Reporting App</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="user">User</string>
